; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_convert_r5g5_snorm_l6_unorm.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_convert_r5g5_snorm_l6_unorm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i32, i32, i32, i32, i32)* @convert_r5g5_snorm_l6_unorm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @convert_r5g5_snorm_l6_unorm(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i8, align 1
  %23 = alloca i8, align 1
  %24 = alloca i8, align 1
  %25 = alloca i16*, align 8
  %26 = alloca i16*, align 8
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  store i32 0, i32* %21, align 4
  br label %27

27:                                               ; preds = %109, %9
  %28 = load i32, i32* %21, align 4
  %29 = load i32, i32* %18, align 4
  %30 = icmp ult i32 %28, %29
  br i1 %30, label %31, label %112

31:                                               ; preds = %27
  store i32 0, i32* %20, align 4
  br label %32

32:                                               ; preds = %105, %31
  %33 = load i32, i32* %20, align 4
  %34 = load i32, i32* %17, align 4
  %35 = icmp ult i32 %33, %34
  br i1 %35, label %36, label %108

36:                                               ; preds = %32
  %37 = load i32*, i32** %11, align 8
  %38 = load i32, i32* %21, align 4
  %39 = load i32, i32* %15, align 4
  %40 = mul i32 %38, %39
  %41 = zext i32 %40 to i64
  %42 = getelementptr inbounds i32, i32* %37, i64 %41
  %43 = load i32, i32* %20, align 4
  %44 = load i32, i32* %14, align 4
  %45 = mul i32 %43, %44
  %46 = zext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %42, i64 %46
  %48 = bitcast i32* %47 to i16*
  store i16* %48, i16** %26, align 8
  %49 = load i32*, i32** %10, align 8
  %50 = load i32, i32* %21, align 4
  %51 = load i32, i32* %13, align 4
  %52 = mul i32 %50, %51
  %53 = zext i32 %52 to i64
  %54 = getelementptr inbounds i32, i32* %49, i64 %53
  %55 = load i32, i32* %20, align 4
  %56 = load i32, i32* %12, align 4
  %57 = mul i32 %55, %56
  %58 = zext i32 %57 to i64
  %59 = getelementptr inbounds i32, i32* %54, i64 %58
  %60 = bitcast i32* %59 to i16*
  store i16* %60, i16** %25, align 8
  store i32 0, i32* %19, align 4
  br label %61

61:                                               ; preds = %101, %36
  %62 = load i32, i32* %19, align 4
  %63 = load i32, i32* %16, align 4
  %64 = icmp ult i32 %62, %63
  br i1 %64, label %65, label %104

65:                                               ; preds = %61
  %66 = load i16*, i16** %25, align 8
  %67 = load i16, i16* %66, align 2
  %68 = zext i16 %67 to i32
  %69 = and i32 %68, 64512
  %70 = lshr i32 %69, 10
  %71 = trunc i32 %70 to i8
  store i8 %71, i8* %24, align 1
  %72 = load i16*, i16** %25, align 8
  %73 = load i16, i16* %72, align 2
  %74 = zext i16 %73 to i32
  %75 = and i32 %74, 992
  %76 = lshr i32 %75, 5
  %77 = trunc i32 %76 to i8
  store i8 %77, i8* %23, align 1
  %78 = load i16*, i16** %25, align 8
  %79 = load i16, i16* %78, align 2
  %80 = zext i16 %79 to i32
  %81 = and i32 %80, 31
  %82 = trunc i32 %81 to i8
  store i8 %82, i8* %22, align 1
  %83 = load i8, i8* %22, align 1
  %84 = zext i8 %83 to i32
  %85 = add nsw i32 %84, 16
  %86 = shl i32 %85, 11
  %87 = load i8, i8* %24, align 1
  %88 = zext i8 %87 to i32
  %89 = shl i32 %88, 5
  %90 = or i32 %86, %89
  %91 = load i8, i8* %23, align 1
  %92 = zext i8 %91 to i32
  %93 = add nsw i32 %92, 16
  %94 = or i32 %90, %93
  %95 = trunc i32 %94 to i16
  %96 = load i16*, i16** %26, align 8
  store i16 %95, i16* %96, align 2
  %97 = load i16*, i16** %26, align 8
  %98 = getelementptr inbounds i16, i16* %97, i32 1
  store i16* %98, i16** %26, align 8
  %99 = load i16*, i16** %25, align 8
  %100 = getelementptr inbounds i16, i16* %99, i32 1
  store i16* %100, i16** %25, align 8
  br label %101

101:                                              ; preds = %65
  %102 = load i32, i32* %19, align 4
  %103 = add i32 %102, 1
  store i32 %103, i32* %19, align 4
  br label %61

104:                                              ; preds = %61
  br label %105

105:                                              ; preds = %104
  %106 = load i32, i32* %20, align 4
  %107 = add i32 %106, 1
  store i32 %107, i32* %20, align 4
  br label %32

108:                                              ; preds = %32
  br label %109

109:                                              ; preds = %108
  %110 = load i32, i32* %21, align 4
  %111 = add i32 %110, 1
  store i32 %111, i32* %21, align 4
  br label %27

112:                                              ; preds = %27
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
